# moj-elektro-analitika

./: README.rst  pyproject.toml
.github/workflows/: build-pipeline.yml  release.yml  static-analysis.yml
moj_elektro_analitika/: __init__.py  buckets_poraba_moj_elektro.py  dogovorjena_moc_moj_elektro.py  moj_elektro_readings_utils.py  poraba_moj_elektro.py  presezki_moj_elektro.py  racun_moj_elektro.py
